force-app/main/default/objects/Transaction_Reroute__b/Transaction_Reroute__b.object-meta.xml
<CustomObject>
    <indexes>
        <fullName>Base_Index</fullName>
        <fields>
            <name>Subscription__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <fields>
            <name>SFID__c</name>
            <sortDirection>ASC</sortDirection>
        </fields>
        <label>Base Index</label>
    </indexes>
    <label>Transaction Reroute</label>
    <pluralLabel>Transaction Reroutes</pluralLabel>
</CustomObject>