force-app/main/default/objects/Transaction_Reroute__b/fields/Cancelled__c.field-meta.xml
<CustomField>
        <fullName>Cancelled__c</fullName>
        <label>Cancelled</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>