force-app/main/default/objects/Transaction_Reroute__b/fields/Deleted_Date__c.field-meta.xml
<CustomField>
        <fullName>Deleted_Date__c</fullName>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </CustomField>