force-app/main/default/objects/Transaction_Reroute__b/fields/Entry_Date__c.field-meta.xml
<CustomField>
        <fullName>Entry_Date__c</fullName>
        <label>Entry Date</label>
        <type>DateTime</type>
    </CustomField>