force-app/main/default/objects/Transaction_Reroute__b/fields/First_Date__c.field-meta.xml
<CustomField>
        <fullName>First_Date__c</fullName>
        <label>First Date</label>
        <type>DateTime</type>
    </CustomField>