force-app/main/default/objects/Transaction_Reroute__b/fields/Product_Code__c.field-meta.xml
<CustomField>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>