force-app/main/default/objects/Transaction_Reroute__b/fields/Promo_Code__c.field-meta.xml
<CustomField>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>