force-app/main/default/objects/Transaction_Reroute__b/fields/Rate_Table__c.field-meta.xml
<CustomField>
        <fullName>Rate_Table__c</fullName>
        <label>Rate Table</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>