force-app/main/default/objects/Transaction_Reroute__b/fields/SFDC_Id__c.field-meta.xml
<CustomField>
        <fullName>SFDC_Id__c</fullName>
        <label>SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>