force-app/main/default/objects/Transaction_Reroute__b/fields/Term_Code__c.field-meta.xml
<CustomField>
        <fullName>Term_Code__c</fullName>
        <label>Term Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>